# groupon-cos-case

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agent/: agent.py  backlog.py  backlog_state.json  pipeline.py  slack_notify.py  tools.py
analysis/: analyze.py  clean.py  sheets_export.py
data/: option_a_ticket_data.csv
tests/: test_tools.py
